---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() -> pub [bool; 2] {
    // Safety: comment added by `nargo expand`
    unsafe {
        func_1([[true, true], [true, false]])
    }
}

unconstrained fn func_1(mut a: [[bool; 2]; 2]) -> [bool; 2] {
    let mut i: u32 = 1_u32;
    loop {
        if i == 1_u32 {
            break;
        }
    }
    a[1_u32][1_u32] = true;
    [true, false]
}
